Lombokked entire project + other quick refactor jobs.